# Bloodcore-AI

./: README.md  pyproject.toml
src/bloodcore/: crew.py  main.py  report.md  sample.py
src/bloodcore/api/auth/: client.py  config.py  constants.py  exceptions.py  router.py  schemas.py  service.py
src/bloodcore/api/blood_report_analyzer/: constant.py  exceptions.py  router.py  schemas.py  service.py  utils.py
src/bloodcore/api/email/: config.py  constants.py  exceptions.py  router.py  schemas.py  service.py  utils.py
src/bloodcore/api/pdf/: router.py  service.py
src/bloodcore/config/: agents.yaml  tasks.yaml
