[tool.poetry]
name = "bloodcore"
version = "0.1.0"
description = "bloodcore using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = {extras = ["tools"], version = "^0.41.1"}
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
python-multipart = "^0.0.9"
pdfminer-six = "^20240706"
pydantic = "^2.8.2"
passlib = "^1.7.4"
slowapi = "^0.1.9"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
supabase = "^2.6.0"
pymupdf = "^1.24.9"
fastapi-mail = "^1.4.1"

[tool.poetry.scripts]
bloodcore = "bloodcore.main:run"
train = "bloodcore.main:train"
replay = "bloodcore.main:replay"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
